spear phishing email changes on submit

--- a/templates/socialengresults.html
+++ b/templates/socialengresults.html
@@ -239,8 +239,9 @@
                             <p>
                                 "Spear Phishing" is a specific type of phishing attack that appears to come from a trusted source. Attackers can use information they find online to impersonate someone that the victim trusts, increasing the chance of a successful attack.
                             </p>
+                            <div id="spearphishing-image">
                             <img style="margin: auto;display: block;" src="/static/images/phishing-email.png">
-
+                          </div>
                             <div id="question3">
                                 <div id='q3-check' class="question-space"> &nbsp; </div>
 
