--- a/templates/socialeng.html
+++ b/templates/socialeng.html
@@ -20,6 +20,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
 
 <body data-spy="scroll" data-target="#sidebar">
@@ -242,7 +243,9 @@
                               "Spear Phishing" is a specific type of phishing attack that appears to come from a trusted source. Attackers
                               can use information they find online to impersonate someone that the victim trusts, increasing the chance of a successful attack.
                             </p>
+                            <div id="spearphishing-image">
                             <img style="margin: auto;display: block;" src="/static/images/phishing-email.png">
+                          </div>
                             <br/>
                             <div id="question3">
                                 <div id='q3-check' class="question-space"> &nbsp; </div>
@@ -331,6 +334,6 @@
             });
         });
     </script>
-</body>
+
 
 </html>
