updated browser security

--- a/templates/browser.html
+++ b/templates/browser.html
@@ -119,8 +119,10 @@
                                 <li> Be aware that while plug-ins from official sources are safer than third-party installations, they are not completely safe. </li>
                                 <li> Never install an unknown plug-in. </li>
                             </ul>
-                            <hr>
-                            <h6> Select your favorite browser, then click on the images below to go through the steps of disabling plug-ins. </h6>
+                          </div>
+                        <div class="card card-block">
+                            <h5> Select your favorite browser, then <b>click</b> on the images below to go through the steps of disabling plug-ins. </h5>
+                            <hr/>
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-plugins" role="tab">Chrome</a> </li>
@@ -158,8 +160,11 @@
                                 <li> Follow the instructions specific to your browser below to configure cookies for specific sites. </li>
                             </ul>
                             <hr>
+                          </div>
+                          <div class="card card-block">
 
-                            <h6> Select your favorite browser, then click on the images below to go through the steps of disabling pop-ups. </h6>
+                            <h5> Select your favorite browser, then <b>click</b> on the images below to go through the steps of disabling pop-ups. </h5>
+                            <hr/>
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-popups" role="tab">Chrome</a> </li>
