adding images changes on submit to fake websites

--- a/templates/socialeng.html
+++ b/templates/socialeng.html
@@ -184,11 +184,11 @@
                             <!-- Tab panes -->
                             <div class="tab-content">
                                 <div class="tab-pane card-block active" id="web1" role="tabpanel">
-                                    <img style="max-width: 100%" src="static/images/image1.jpg">
+                                    <img id="fake-website-image-1" style="max-width: 100%" src="static/images/image1.jpg">
                                 </div>
 
                                 <div class="tab-pane card-block" id="web2" role="tabpanel">
-                                    <img style="max-width: 100%" src="static/images/image2.jpg">
+                                    <img id="fake-website-image-2" style="max-width: 100%" src="static/images/image2.jpg">
                                 </div>
                             </div>
 
