--- a/templates/browser.html
+++ b/templates/browser.html
@@ -121,8 +121,12 @@
                             </ul>
                           </div>
                         <div class="card card-block">
-                            <h5> Select your favorite browser, then <b>click</b> on the images below to go through the steps of disabling plug-ins. </h5>
-                            <hr/>
+
+                          <p class="card card-block card-instruction">Select your favorite browser, then <b>click</b> on the images below to go through the steps of disabling plug-ins.</p>
+
+
+
+
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-plugins" role="tab">Chrome</a> </li>
@@ -159,12 +163,12 @@
                                 <li> If, for some reason, you turn off your pop-up blocker, remember to turn it back on! </li>
                                 <li> Follow the instructions specific to your browser below to configure cookies for specific sites. </li>
                             </ul>
-                  
+
                           </div>
                           <div class="card card-block">
 
-                            <h5> Select your favorite browser, then <b>click</b> on the images below to go through the steps of disabling pop-ups. </h5>
-                            <hr/>
+
+                            <p class="card card-block card-instruction">Select your favorite browser, then <b>click</b> on the images below to go through the steps of disabling pop-ups.</p>
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-popups" role="tab">Chrome</a> </li>
