--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -122,15 +122,17 @@
                         <div class="card card-block">
                             <h4 id="exercise" class="card-title"> Password Cracking Simulation </h4>
 
+
+
                             <p>
                                 This exercise can show you how fast passwords can be cracked.
                             </p>
-                            <p>
-                                Try to meet each requirement in the <i>Password Characteristics</i> table and observe your results!
-                            </p>
 
-                            <p>To start, enter something in this box: &nbsp;
-                                <input name="passwordTxt" type="text" maxlength="512" id="passwordTxt" class="searchField" oninput="searchDict();guessPassword();">
+                            <p class="card card-block card-instruction"> Enter passwords in the form below to see how quickly they could be guessed using dictionary and brute force attacks.
+                            Notice how passwords with stronger characteristics take longer to crack.</p>
+
+                            <p>
+                                <input name="passwordTxt" type="text" maxlength="512" id="passwordTxt" class="searchField" oninput="searchDict();guessPassword();" placeholder="Password">
                             </p>
 
                             <table class="table table-bordered table-sm">
@@ -221,8 +223,10 @@
                                 <li> Attackers can easily obtain default passwords and identify internet-connected target systems. </li>
                             </ul>
 
-                            <p> Here is one of many websites that list default passwords: &nbsp;<a href="http://www.defaultpassword.com/"><b>http://www.defaultpassword.com/</b></a></p>
-                            <p>In the video below you can see how default passwords can be used against you.</p>
+                            <p class="card card-block card-instruction">Visit this website to see the default passwords for many devices: &nbsp;<a href="http://www.defaultpassword.com/">http://www.defaultpassword.com/</a></p>
+
+                            <p class="card card-block card-instruction">Watch the video below to see how default passwords can be used against you.</p>
+
                             <div id="pw-video" class="embed-responsive embed-responsive-16by9 m-y-2">
                                 <p> Here is one incident that highlights the potential risks of using default passwords. </p>
                                 <iframe align="middle" class="embed-responsive-item" src="//www.youtube.com/embed/P0e-L9xuy6M" allowfullscreen></iframe>
