--- a/templates/socialengresults.html
+++ b/templates/socialengresults.html
@@ -64,13 +64,13 @@
                         <div id="sidebar">
                             <nav>
                                 <ul id="sidebar-links" class="nav nav-pills nav-stacked">
-                                    <li class="nav-item"> <a class="nav-link" href="#phishing"> Phishing </a> </li>
-                                    <hr>
-                                    <li class="nav-item"> <a class="nav-link" href="#fakesites"> Fake Websites </a> </li>
-                                    <hr>
-                                    <li class="nav-item"> <a class="nav-link" href="#spearphishing"> Spear Phishing </a> </li>
-                                    <hr>
-                                    <li class="nav-item"> <a class="nav-link" href="#privacy"> Privacy </a> </li>
+                                  <li class="nav-item"> <a class="nav-link" href="#phishing"> Phishing </a> </li>
+                                  <hr>
+                                  <li class="nav-item"> <a class="nav-link" href="#fakesites"> Fake Websites </a> </li>
+                                  <hr>
+                                  <li class="nav-item"> <a class="nav-link" href="#spearphishing"> Spear Phishing </a> </li>
+                                  <hr>
+                                  <li class="nav-item"> <a class="nav-link" href="#privacy"> Privacy </a> </li>
                                 </ul>
                             </nav>
                         </div>
@@ -79,14 +79,16 @@
                         <div class="card card-block">
                             <h3 id="phishing" class="card-title"> Phishing and You </h3>
                             <hr>
-                            <p>Review the emails below and see if you think they are suspicious.</p>
+
+                            <p class="card card-block card-instruction"> Review the emails below and see if you think they are suspicious. </p>
+
                             <ul class="nav nav-tabs" role="tablist">
-                                <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#level1" role="tab">Email 1</a> </li>
-                                <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#level2" role="tab">Email 2</a> </li>
+                                <li class="nav-item"> <a class="nav-link light-bg active" data-toggle="tab" href="#level1" role="tab">Email 1</a> </li>
+                                <li class="nav-item"> <a class="nav-link lighter-bg" data-toggle="tab" href="#level2" role="tab">Email 2</a> </li>
                             </ul>
                             <!-- Tab panes -->
                             <div class="tab-content">
-                                <div class="tab-pane card-block active" id="level1" role="tabpanel">
+                                <div class="tab-pane card-block light-bg active" id="level1" role="tabpanel">
                                     <p> To: a_student@columbusstate.edu
                                         <br> From: "John Smith" &lt;john_smith@schoolfeepayment.xyz&gt;
                                         <br> Subject: URGENT! Unbalanced account, dropped classes now if no REPLY
@@ -99,7 +101,7 @@
 
                                 </div>
 
-                                <div class="tab-pane card-block" id="level2" role="tabpanel">
+                                <div class="tab-pane card-block lighter-bg" id="level2" role="tabpanel">
                                     <p> To: a_student@columbusstate.edu
                                         <br> From: “Jeremy Little” &lt;j.little@fedaid.com&gt;
                                         <br> Subject: Your FAFSA Account – Account Compromised
@@ -172,20 +174,19 @@
                         <div class="card card-block">
                             <h5 id="fakesites"> Fake Websites </h5>
                             <p> Phishing emails can take you to fake websites that are designed to look like legitimate websites. </p>
-                            <br>
-                            <p> Click on the tabs below to switch between two websites. Which one is real? </p>
+                            <p class="card card-block card-instruction"> Click on the tabs below to switch between two websites. Which one is real? </p>
 
                             <ul class="nav nav-tabs" role="tablist">
-                                <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#web1" role="tab">Website 1</a> </li>
-                                <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#web2" role="tab">Website 2</a> </li>
+                                <li class="nav-item"> <a class="nav-link light-bg active" data-toggle="tab" href="#web1" role="tab">Website 1</a> </li>
+                                <li class="nav-item"> <a class="nav-link lighter-bg" data-toggle="tab" href="#web2" role="tab">Website 2</a> </li>
                             </ul>
                             <!-- Tab panes -->
                             <div class="tab-content">
-                                <div class="tab-pane card-block active" id="web1" role="tabpanel">
+                                <div class="tab-pane card-block light-bg active" id="web1" role="tabpanel">
                                     <img id="fake-website-image-1" style="max-width: 100%" src="static/images/image1.jpg">
                                 </div>
 
-                                <div class="tab-pane card-block" id="web2" role="tabpanel">
+                                <div class="tab-pane card-block lighter-bg" id="web2" role="tabpanel">
                                     <img id="fake-website-image-2" style="max-width: 100%" src="static/images/image2.jpg">
                                 </div>
                             </div>
@@ -223,6 +224,7 @@
                             <div class="form-check" style="text-align: center;">
                                 <button class="submit" onclick="checkQuestion2()"> Submit! </button>
                             </div>
+
                             <div id="fake-websites-results"></div>
                         </div>
                         <div class="card card-block">
@@ -237,11 +239,13 @@
                         <div class="card card-block">
                             <h5 id="spearphishing"> Spear Phishing </h5>
                             <p>
-                                "Spear Phishing" is a specific type of phishing attack that appears to come from a trusted source. Attackers can use information they find online to impersonate someone that the victim trusts, increasing the chance of a successful attack.
+                              "Spear Phishing" is a specific type of phishing attack that appears to come from a trusted source. Attackers
+                              can use information they find online to impersonate someone that the victim trusts, increasing the chance of a successful attack.
                             </p>
                             <div id="spearphishing-image">
                             <img style="margin: auto;display: block;" src="/static/images/phishing-email.png">
                           </div>
+                            <br/>
                             <div id="question3">
                                 <div id='q3-check' class="question-space"> &nbsp; </div>
 
@@ -266,15 +270,28 @@
                                 <button class="submit" onclick="checkQuestion3()"> Submit! </button>
                             </div>
                             <div id="phishing-results"></div>
-
                         </div>
                         <div class="card card-block">
-                            <h5 id="privacy">Privacy</h5>
-                            <p>
-                                Disclosing personal information on the internet can have devastating effects. Social networks can provide attackers with information such as full name, DOB, hometown, relationship information, education, graduation dates, pet names, interests, hobbies, and affiliations. This information can be used in a spear phishing attack to gain further information about a target, as well as crafting targeted password attacks.
-                                <br/>
-                                <br/> There is a shocking amount of information available online. Knowing someone's name and location is often all you need to find specific details about someone. Type your first and last name into the form below to see if we can find information about you.
-                            </p>
+                           <h5 id="privacy">Privacy</h5>
+                           <p>
+                           Disclosing personal information on the internet can have devastating effects. Social networks can provide attackers
+                           with information such as full name, DOB, hometown, relationship information, education, graduation dates, pet names,
+                           interests, hobbies, and affiliations. This information can be used in a spear phishing attack to gain further
+                           information about a target, as well as crafting targeted password attacks.
+                           <br/><br/>
+
+
+                           There is a shocking amount of information available online. Knowing someone's name and location
+                           is often all you need to find specific details about someone.
+
+                           </p>
+
+                           <p class="card card-block card-instruction">Type your first and last name into the
+                           form below to see if we can find information about you.</p>
+                          </p>
+
+
+
 
                             <form method="POST">
                                 <fieldset class="form-group" style="padding-bottom:10px;">
